--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
     "mongodb": "^6.20.0",
     "next": "15.5.6",
