--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
     "mongodb": "^6.20.0",
     "next": "15.5.6",
