--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
+    "@studio-freight/lenis": "^1.0.42",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "mongodb": "^6.20.0",
     "next": "15.5.6",
     "next-sanity": "^11.5.5",
