--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
+    "@sanity/image-url": "^1.2.0",
     "@studio-freight/lenis": "^1.0.42",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
@@ -20,7 +21,8 @@
     "next-sanity": "^11.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "resend": "^6.2.0"
+    "resend": "^6.2.0",
+    "sanity": "^4.10.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
