--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
-    "@studio-freight/lenis": "^1.0.42",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
     "mongodb": "^6.20.0",
     "next": "15.5.6",
