--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
     "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
