--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
+    "@tsparticles/slim": "^3.9.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -22,6 +23,7 @@
     "next-sanity": "^11.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-tsparticles": "^2.12.2",
     "resend": "^6.2.0",
     "sanity": "^4.10.3"
   },
