--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tsparticles/slim": "^3.9.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
