--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.14.0",
     "@react-email/render": "^1.4.0",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
